--- a/src/components/Playcard/Tabs/Characteristics/Characteristics.module.css
+++ b/src/components/Playcard/Tabs/Characteristics/Characteristics.module.css
@@ -34,6 +34,7 @@
     flex-wrap: wrap;
     align-content: space-between;
     width: calc(100% - 20px);
+    max-width: 560px;
     height: calc(100% - 20px);
     gap: 5px;
     padding: 10px;
