--- a/src/layouts/CharacterCard/CharacterCard.module.css
+++ b/src/layouts/CharacterCard/CharacterCard.module.css
@@ -301,6 +301,7 @@
 
 .content {
     min-width: 1000px;
+    max-width: 1200px;
     height: calc(100vh - 220px);
     border-radius: 0 15px 15px 15px;
     padding: 5px;
