--- a/src/components/Playcard/Tabs/Loot/Loot.module.css
+++ b/src/components/Playcard/Tabs/Loot/Loot.module.css
@@ -177,6 +177,7 @@
 }
 
 .weight-wrap {
+    width: calc(25% - 20px);
     max-height: 200px;
     display: flex;
     flex-direction: column;
@@ -184,10 +185,7 @@
     gap: 5px;
     align-items: center;
     border-radius: 25px;
-    position: absolute;
     z-index: 1;
-    bottom: 100px;
-    right: 120px;
     padding: 5px;
 }
 
