--- a/src/components/Playcard/Tabs/Characteristics/Characteristics.module.css
+++ b/src/components/Playcard/Tabs/Characteristics/Characteristics.module.css
@@ -17,14 +17,21 @@
 }
 
 .stat-text {
-    font-size: 28px;
+    font-size: 2rem;
+}
+
+.stat-column {
+    width: calc(50% - 20px);
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    overflow-y: scroll;
 }
 
 .stat-wrap {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    width: calc(50% - 20px);
     border-bottom: 1px solid var(--text-color);
     margin-bottom: 5px;
 }
