test added firebase get/set preset functionality changed yml to work with firebase minor fixed in some places

--- a/src/components/EditTextPopup/EditTextPopup.module.css
+++ b/src/components/EditTextPopup/EditTextPopup.module.css
@@ -33,11 +33,11 @@
     font-style: italic;
 }
 
-.underline {
-    text-decoration: underline;
+.text.underline {
+    text-decoration: underline !important;
 }
 
-.overline {
+.text.overline {
     text-decoration: overline;
 }
 
