--- a/src/components/RichText/RichText.module.css
+++ b/src/components/RichText/RichText.module.css
@@ -7,11 +7,11 @@
 }
 
 .underline {
-    text-decoration: underline;
+    text-decoration: underline !important;
 }
 
 .overline {
-    text-decoration: overline;
+    text-decoration: overline !important;
 }
 
 .link {
