--- a/src/components/EditTextPopup/EditTextPopup.module.css
+++ b/src/components/EditTextPopup/EditTextPopup.module.css
@@ -13,6 +13,24 @@
     border: 1px solid var(--text-color);
 }
 
+@media screen and (max-width: 700px) {
+    .wrapper {
+        width: calc(100% - 30px);
+        max-height: 80%;
+    }
+
+    .wrapper .textarea {
+        min-height: 60%;
+    }
+    .wrapper .lines {
+        flex-wrap: wrap;
+        gap: 5px;
+    }
+    .save-btn {
+        margin-left: auto;
+    }
+}
+
 .scrollable {
     overflow-y: scroll;
 }
