--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,13 +1,40 @@
-.header-area {
-    width: 100%;
-    height: 60px;
-    background-color: var(--primary-blue);
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: 20px;
-    justify-content: flex-start;
-    align-items: center;
+@media screen and (min-width: 1201px) {
+    .header-area {
+        width: 100%;
+        height: 60px;
+        background-color: var(--primary-blue);
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        gap: 20px;
+        justify-content: flex-start;
+        align-items: center;
+    }
+}
+
+@media screen and (min-width: 1001px) and (max-width: 1200px) {
+    .header-area {
+        margin-inline: 10px;
+        margin-top: 5px;
+        border-radius: 15px;
+        height: 60px;
+        background-color: var(--primary-blue);
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        gap: 0;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .header-logo {
+        padding-right: 10px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .header-area {
+        display: none;
+    }
 }
 
 .header-logo {
@@ -36,10 +63,6 @@
     text-decoration: none;
 }
 
-.page-header.unable {
-    color: rgb(0,0,0,0.5);
-}
-
 .add-icon-wrapper {
     height: 50px;
     display: flex;
@@ -50,4 +73,9 @@
 
 .unable-wrapper .unable-btn {
     background-color: var(--gray);
+    cursor:not-allowed;
+}
+
+.page-header.unable {
+    color: rgb(0,0,0,0.5);
 }
