--- a/src/components/Playcard/Sticker/Sticker.module.css
+++ b/src/components/Playcard/Sticker/Sticker.module.css
@@ -1,13 +1,46 @@
-.half {
-    width: calc(50% - 20px);
+@media screen and (min-width: 1201px) {
+    .half {
+        width: calc(50% - 20px);
+    }
+
+    .half-half {
+        width: calc(25% - 20px);
+    }
+
+    .one-of-three {
+        width: calc(33% - 20px);
+    }
 }
 
-.half-half {
-    width: calc(25% - 20px);
+@media screen and (max-width: 1300px) and (min-width: 1000px) {
+    .half {
+        width: calc(66% - 20px);
+    }
+
+    .half-half {
+        width: calc(33% - 20px);
+    }
+
+    .one-of-three {
+        width: calc(50% - 20px);
+    }
 }
 
-.one-of-three {
-    width: calc(33% - 20px);
+@media screen and (max-width: 1000px) {
+    .half {
+        width: calc(100% - 20px);
+    }
+
+    .half-half {
+        width: calc(100% - 20px);
+    }
+
+    .one-of-three {
+        width: calc(100% - 20px);
+    }
+    .full-height {
+        max-width: unset !important;
+    }
 }
 
 .sticker.box {
@@ -51,6 +84,7 @@
 .full-height {
     height: calc(100% - 10px);
     max-width: 570px;
+    max-height: 800px;
 }
 
 .add-btn {
