--- a/src/layouts/CharacterCard/CharacterCard.module.css
+++ b/src/layouts/CharacterCard/CharacterCard.module.css
@@ -5,7 +5,484 @@
     flex-wrap: nowrap;
     padding: 0 10px;
     align-items: center;
-    min-width: 1400px;
+}
+
+@media screen and (min-width: 1701px) {
+    .char-card {
+        min-width: 1400px;
+        display: flex;
+        flex-direction: row;
+    }
+    .avatar-wrapper {
+        width: 140px;
+        height: 100%;
+        border-radius: 15px;
+        border-color: var(--primary-green);
+    }
+    .char-card .header-area {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        width: 100%;
+        max-width: 310px;
+        max-height: 900px;
+        overflow-y: scroll;
+    }
+    .content {
+        min-width: 1300px;
+        max-width: 1500px;
+        height: calc(100vh - 80px) !important;
+    }
+    .char-card {
+        width: auto;
+        margin-top: 10px;
+    }
+    
+    .group {
+        margin: 0;
+        margin-bottom: 15px;
+        max-width: 250px;
+    }
+
+    .bottom-buttons {
+        border-radius: 25px;
+    }
+    .big-button-text {
+        font-size: 32px;
+    }
+    .insp-btn {
+        width: 40px;
+        height: 40px;
+    }
+    .aim-img {
+        width: 30px;
+        height: 30px;
+    }
+    .dice-btn {
+        width: 40px;
+        height: 40px;
+    }
+
+    .button-brown {
+        width: 40px;
+        height: 40px;
+        border-radius: 10px;
+    }
+
+    .segment:hover .pre-bottom {
+        max-width: 250px;
+        text-overflow: unset;
+        white-space: wrap;
+        font-size: 18px;
+        width: 100%;
+    }
+    .segment[data-active=true] .pre-bottom {
+        max-width: 250px;
+        text-overflow: unset;
+        white-space: wrap;
+        font-size: 18px;
+        width: 100%;
+    }
+    .pre-bottom {
+        color: var(--text-light-color);
+        font-family: sans-serif;
+        max-width: 250px;
+        white-space: wrap;
+        overflow: hidden;
+        font-size: 18px;
+    }
+    .speed-button {
+        width: 45px;
+        height: 60px;
+        border-width: 1px;
+        border-radius: 10px;
+        background-color: var(--background-color);
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        border: 1px solid var(--text-color);
+        font-family: 'Beryozki';
+        padding: 0;
+    }
+    
+    .armor-button {
+        width: 45px;
+        height: 60px;
+        border-width: 1px;
+    }
+    .bigger-button-text {
+        font-size: 36px;
+    }
+
+    .small-button-text {
+        font-size: 24px;
+    }
+    .armor-button {
+        width: 45px;
+        height: 60px;
+        border-width: 1px;
+        border-radius: 0 0 10px 10px;
+        background-color: var(--gray);
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        border: 1px solid var(--text-color);
+        font-family: 'Beryozki';
+        padding: 0;
+    }
+    .coin {
+        color: var(--text-color);
+        border: 2px dashed rgba(0,0,0,0.25);
+        width: 40px;
+        height: 40px;
+        border-radius: 20px;
+    }
+}
+
+@media screen and (min-width: 1300px) and (max-width: 1700px) {
+    .card {
+        min-width: 1200px;
+    }
+    .char-card {
+        width: 100%;
+    }
+}
+
+@media screen and (min-width: 1201px) and (max-width: 1700px) {
+    .segment:hover .pre-bottom {
+        max-width: 250px;
+        text-overflow: unset;
+        white-space: wrap;
+        font-size: 18px;
+        text-align: center;
+        width: 100%;
+    }
+    .segment[data-active=true] .pre-bottom {
+        max-width: 250px;
+        text-overflow: unset;
+        white-space: wrap;
+        font-size: 18px;
+        text-align: center;
+        width: 100%;
+    }
+    .segment:hover .big-button-text {
+        font-size: 32px;
+    }
+    .segment[data-active=true] .big-button-text {
+        font-size: 32px;
+    }
+    .segment:hover .small-button-text {
+        font-size: 24px;
+    }
+    .segment[data-active=true] .small-button-text {
+        font-size: 24px;
+    }
+}
+
+@media screen and (min-width: 1201px) and (max-width: 1300px) {
+    .char-card {
+        width: 100%;
+    }
+}
+@media screen and (min-width: 401px) and (max-width: 1700px) {
+    .segment:hover {
+        height: 140px;
+        border-radius: 25px 25px 0 0;
+        margin-top: 0;
+    }
+    .segment[data-active=true] .insp-btn {
+        width: 40px;
+        height: 40px;
+    }
+    .insp-btn {
+        width: 30px;
+        height: 30px;
+    }
+
+    .segment[data-active=true] .dice-btn {
+        width: 40px;
+        height: 40px;
+    }
+
+    .segment:hover .dice-btn {
+        width: 40px;
+        height: 40px;
+    }
+
+    .dice-btn {
+        width: 30px;
+        height: 30px;
+    }
+
+    .segment[data-active=true] .aim-img {
+        width: 30px;
+        height: 30px;
+    }
+
+    .segment:hover .aim-img {
+        width: 30px;
+        height: 30px;
+    }
+
+    .aim-img {
+        width: 20px;
+        height: 20px;
+    }
+
+    .segment:hover .insp-btn {
+        width: 40px;
+        height: 40px;
+    }
+    .segment[data-active=true] {
+        height: 140px;
+        border-radius: 25px 25px 0 0;
+        margin-top: 0;
+    }
+    .avatar-wrapper {
+        height: 100px;
+    }
+    .segment[data-active=true] .avatar-wrapper {
+        width: 140px;
+        height: 140px;
+        border-radius: 25px;
+        border-color: var(--primary-green);
+    }
+    .group {
+        margin: 0;
+        margin-bottom: 15px;
+        max-width: 170px;
+    }
+    .segment:hover .avatar-wrapper {
+        width: 140px;
+        height: 140px;
+        border-radius: 25px;
+    }
+    .bottom-buttons {
+        border-radius: 15px;
+    }
+    .segment:hover .button-brown {
+        width: 40px;
+        height: 40px;
+        border-radius: 10px;
+    }
+    .segment[data-active=true] .button-brown {
+        height: 40px;
+        border-radius: 10px;
+    }
+    .pre-bottom {
+        color: var(--text-light-color);
+        font-family: sans-serif;
+        max-width: 150px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+
+    .segment:hover .speed-button {
+        width: 45px;
+        height: 60px;
+        border-width: 1px;
+    }
+    .segment[data-active=true] .speed-button {
+        width: 45px;
+        height: 60px;
+        border-width: 1px;
+    }
+    .speed-button {
+        width: 35px;
+        height: 45px;
+        border-radius: 10px;
+        background-color: var(--background-color);
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        border: 1px solid var(--text-color);
+        font-family: 'Beryozki';
+        padding: 0;
+    }
+    .armor-button {
+        width: 35px;
+        height: 45px;
+        border-radius: 0 0 10px 10px;
+        background-color: var(--gray);
+        box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        border: 1px solid var(--text-color);
+        font-family: 'Beryozki';
+        padding: 0;
+    }
+
+    .segment:hover .armor-button {
+        width: 45px;
+        height: 60px;
+        border-width: 1px;
+    }
+    .segment[data-active=true] .armor-button {
+        width: 45px;
+        height: 60px;
+        border-width: 1px;
+    }
+    .bigger-button-text {
+        font-size: 26px;
+    }
+
+    .small-button-text {
+        font-size: 16px;
+    }
+
+    .segment:hover .bigger-button-text {
+        font-size: 36px;
+    }
+    .segment[data-active=true] .bigger-button-text {
+        font-size: 36px;
+    }
+
+    .coin {
+        color: var(--text-color);
+        border: 2px dashed rgba(0,0,0,0.25);
+    }
+
+    .segment:hover .coin {
+        width: 40px;
+        height: 40px;
+        border-radius: 20px;
+    }
+    .segment[data-active=true] .coin {
+        width: 40px;
+        height: 40px;
+        border-radius: 20px;
+    }
+}
+@media screen and (min-width: 1201px) {
+    .content {
+        border-radius: 0 15px 15px 15px;
+    }
+
+    .header-area {
+        background-color: transparent;
+        justify-content: flex-start;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .header-area {
+        margin-bottom: 5px;
+        border-radius: 15px;
+        margin-top: 5px;
+        justify-content: space-between;
+    }
+
+    .group {
+        margin: 0;
+        max-width: 170px;
+        height: 120px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .content {
+        border-radius: 15px;
+    }
+
+    .avatar-wrapper {
+        height: 120px;
+    }
+}
+
+.scrollable {
+    overflow-x: scroll;
+}
+
+@media screen and (min-width: 400px) and (max-width: 1200px) {
+    .header-area {
+        max-width: 1200px;
+        overflow: scroll;
+        gap: 10px;
+    }
+    .segment:hover .avatar-wrapper {
+        width: 100px;
+        height: 140px;
+        border-radius: 15px;
+    }
+    .segment[data-active=true] .avatar-wrapper {
+        width: 100px;
+        height: 120px;
+        border-radius: 15px;
+        border-color: var(--primary-green);
+    }
+    .segment:hover {
+        height: 120px;
+        border-radius: 15px;
+    }
+    .segment[data-active=true] {
+        height: 120px;
+        border-radius: 15px;
+    }
+    .char-card {
+        width: 100%;
+    }
+    .avatar-wrapper {
+        width: 100px;
+    }
+    .segment:hover .big-button-text {
+        font-size: 28px;
+    }
+    .segment[data-active=true] .big-button-text {
+        font-size: 28px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .content {
+        height: calc(100vh - 140px) !important;
+    }
+    .armor-button {
+        width: 45px;
+        height: 60px;
+        border-width: 1px;
+    }
+    .speed-button {
+        width: 45px;
+        height: 60px;
+        border-width: 1px;
+    }
+    .bigger-button-text {
+        font-size: 36px;
+    }
+    .button-info .big-button-text {
+        font-size: 32px;
+    }
+    .button-brown {
+        height: 40px;
+    }
+    .coin {
+        height: 40px;
+        width: 40px;
+        border-radius: 20px;
+    }
+    .insp-btn {
+        height: 40px;
+        width: 40px;
+    }
+    .dice-btn {
+        height: 40px;
+        width: 40px;
+    }
+    .aim-img {
+        width: 30px;
+        height: 30px;
+    }
+    .small-button-text.current-hp-text {
+        font-size: 24px;
+    }
+    .small-button-text {
+        font-size: 20px;
+    }
+    .ini-text {
+        display: none;
+    }
 }
 
 .header-area {
@@ -13,50 +490,24 @@
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: flex-end;
-    justify-content: flex-start;
-    min-width: 1000px;
-    max-width: 1300px;
-}
-
-.segment:hover {
-    height: 140px;
-    border-radius: 25px 25px 0 0;
-}
-.segment[data-active=true] {
-    height: 140px;
-    border-radius: 25px 25px 0 0;
 }
 
 .avatar-wrapper {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    width: 100px;
-    height: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px solid var(--primary-green);
+    border: 2px solid var(--darker-green);
     border-radius: 15px;
     overflow: hidden;
-}
-
-.segment:hover .avatar-wrapper {
-    width: 140px;
-    height: 140px;
-    border-radius: 25px;
-}
-.segment[data-active=true] .avatar-wrapper {
-    width: 140px;
-    height: 140px;
-    border-radius: 25px;
 }
 
 .bottom-buttons {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    border-radius: 15px;
     background-color: var(--primary-brown);
     justify-content: space-between;
     position: relative;
@@ -82,36 +533,6 @@
     font-size: 20px;
 }
 
-.bigger-button-text {
-    font-size: 26px;
-}
-
-.small-button-text {
-    font-size: 16px;
-}
-
-.segment:hover .big-button-text {
-    font-size: 32px;
-}
-.segment[data-active=true] .big-button-text {
-    font-size: 32px;
-}
-
-
-.segment:hover .bigger-button-text {
-    font-size: 36px;
-}
-.segment[data-active=true] .bigger-button-text {
-    font-size: 36px;
-}
-
-.segment:hover .small-button-text {
-    font-size: 24px;
-}
-.segment[data-active=true] .small-button-text {
-    font-size: 24px;
-}
-
 .expandable-round-button {
     min-width: 30px;
     border-radius: 10px;
@@ -121,17 +542,6 @@
 .button-brown {
     background-color: var(--background-color);
     z-index: 3;
-    border-radius: 10px;
-}
-
-.segment:hover .button-brown {
-    width: 40px;
-    height: 40px;
-    border-radius: 10px;
-}
-.segment[data-active=true] .button-brown {
-    width: 40px;
-    height: 40px;
     border-radius: 10px;
 }
 
@@ -173,22 +583,6 @@
     color: var(--text-unable-color);
 }
 
-.coin {
-    color: var(--text-color);
-    border: 2px dashed rgba(0,0,0,0.25);
-}
-
-.segment:hover .coin {
-    width: 40px;
-    height: 40px;
-    border-radius: 20px;
-}
-.segment[data-active=true] .coin {
-    width: 40px;
-    height: 40px;
-    border-radius: 20px;
-}
-
 .gold {
     background-color: #FFEE51;
 }
@@ -210,54 +604,6 @@
     padding: 0 5px;
 }
 
-.armor-button {
-    width: 35px;
-    height: 45px;
-    border-radius: 0 0 10px 10px;
-    background-color: var(--gray);
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    border: 1px solid var(--text-color);
-    font-family: 'Beryozki';
-    padding: 0;
-}
-
-.segment:hover .armor-button {
-    width: 45px;
-    height: 60px;
-    border-width: 1px;
-}
-.segment[data-active=true] .armor-button {
-    width: 45px;
-    height: 60px;
-    border-width: 1px;
-}
-
-.segment:hover .speed-button {
-    width: 45px;
-    height: 60px;
-    border-width: 1px;
-}
-.segment[data-active=true] .speed-button {
-    width: 45px;
-    height: 60px;
-    border-width: 1px;
-}
-
-.speed-button {
-    width: 35px;
-    height: 45px;
-    border-radius: 10px;
-    background-color: var(--background-color);
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    border: 1px solid var(--text-color);
-    font-family: 'Beryozki';
-    padding: 0;
-}
-
 .segment .speed-button.wider {
     width: 60px;
 }
@@ -272,46 +618,31 @@
     align-items: center;
 }
 
-.pre-bottom {
-    color: var(--text-light-color);
-    font-family: sans-serif;
-    max-width: 150px;
-    text-overflow: ellipsis;
+@media screen and (max-width: 1200px) {
+    .segment:hover .pre-bottom {
+    max-width: 200px;
     white-space: nowrap;
-    overflow: hidden;
-}
-
-.segment:hover .pre-bottom {
-    max-width: 250px;
-    text-overflow: none;
-    white-space: wrap;
     font-size: 18px;
     text-align: center;
     width: 100%;
-}
-.segment[data-active=true] .pre-bottom {
-    max-width: 250px;
-    text-overflow: none;
-    white-space: wrap;
-    font-size: 18px;
-    text-align: center;
-    width: 100%;
+    }
+    .segment[data-active=true] .pre-bottom {
+        max-width: 200px;
+        text-overflow: unset;
+        white-space: nowrap;
+        font-size: 18px;
+        text-align: center;
+        width: 100%;
+    }
 }
 
 .avatar {
     width: 100%;
 }
 
-.char-card {
-    width: auto;
-}
-
 .content {
     width: 100%;
-    min-width: 1400px;
-    max-width: 1500px;
     height: calc(100vh - 220px);
-    border-radius: 0 15px 15px 15px;
     padding: 5px;
     box-sizing: border-box;
     display: flex;
@@ -517,6 +848,7 @@
     width: 300px;
     height: 300px;
     border-radius: 10px;
+    object-fit:cover;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -535,52 +867,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 30px;
-    height: 30px;
     border-radius: 10px;
     cursor: pointer;
     background-color: var(--darker-brown);
 }
 
-.segment[data-active=true] .dice-btn {
-    width: 40px;
-    height: 40px;
-}
-
-.segment:hover .dice-btn {
-    width: 40px;
-    height: 40px;
-}
-
-.segment[data-active=true] .aim-img {
-    width: 30px;
-    height: 30px;
-}
-
-.segment:hover .aim-img {
-    width: 30px;
-    height: 30px;
-}
-
-.aim-img {
-    width: 20px;
-    height: 20px;
-}
-.segment[data-active=true] .insp-btn {
-    width: 40px;
-    height: 40px;
-}
-
-.segment:hover .insp-btn {
-    width: 40px;
-    height: 40px;
-}
 .insp-btn {
     cursor: pointer;
     border-radius: 10px;
     margin-top: auto;
-    width: 30px;
-    height: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
