--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -1,6 +1,6 @@
 .content {
 	width: 300px;	
-	background-color: var(--lighter-brown);
+	background-color: var(--background-color);
 	padding: 10px;
 	border-radius: 15px;
 	box-sizing: border-box;
