--- a/src/components/EditTextPopup/EditTextPopup.module.css
+++ b/src/components/EditTextPopup/EditTextPopup.module.css
@@ -13,10 +13,21 @@
     border: 1px solid var(--text-color);
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 650px) {
     .wrapper {
-        width: calc(100% - 30px);
-        max-height: 80%;
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+        z-index: 1005;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 0;
+        max-height: unset;
+        padding: 5px;
+    }
+    .background {
+        z-index: 1004 !important;
     }
 
     .wrapper .textarea {
@@ -104,6 +115,19 @@
     box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.5);
 }
 
+.cancel-btn {
+    background-color: var(--primary-red);
+    color: var(--text-light-color);
+    border: none;
+    border-radius: 5px;
+    height: 40px;
+    font-family: 'Beryozki';
+    font-size: 28px;
+    -webkit-box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.5);
+}
+
 .green .save-btn {
     background-color: var(--primary-brown);
 }
@@ -140,9 +164,19 @@
     height: 25px;
 }
 
+.cancel-img {
+    width: 25px;
+    height: 25px;
+}
+
 .interactive:hover {
     width: 30px;
     height: 30px;
+}
+
+.cancel-btn:hover {
+    background-color: var(--darker-red);
+    box-shadow: none;
 }
 
 .save-btn:hover {
