--- a/src/components/MenuMobile/MenuMobile.module.css
+++ b/src/components/MenuMobile/MenuMobile.module.css
@@ -5,7 +5,7 @@
 }
 
 .box-wrapper {
-	position: absolute;
+	position: fixed;
     left: 0;
     bottom: 5px;    
     padding-bottom: 5px;
@@ -27,7 +27,6 @@
 	background-color: var(--primary-blue);
 	border-radius: 0 15px 15px 0;
 	border: none;
-	box-shadow: none;
 	display: flex;
 	justify-content: center;
 	align-items: center;
