--- a/src/pages/Characters/Characters.module.css
+++ b/src/pages/Characters/Characters.module.css
@@ -15,6 +15,19 @@
     background-color: var(--darker-brown);
 }
 
+@media screen and (min-width: 1000px) and (max-width: 1200px) {
+    .content {
+        height: calc(100vh - 70px);
+        margin-top: 5px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .content {
+        height: 100vh;
+    }
+}
+
 .scrollable {
     overflow-y: scroll;
 }
