--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -2,21 +2,27 @@
 	width: 300px;	
 	background-color: var(--background-color);
 	padding: 10px;
-	border-radius: 15px;
+	border-radius: 10px;
 	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
+	gap: 10px;
 }
 
 .exit {
-	background-color: var(--darker-brown);
+	background-color: var(--darker-red);
 	border: none;
 	border-radius: 10px;
 }
 
+.exit:hover {
+	background-color: var(--primary-red);
+}
+
 .text {
-	font-size: 40px;
+	font-size: 20px;
+	font-family: sans-serif;
+	margin-top: 10px;
 }
 
 .header {
