--- a/src/layouts/CharacterCard/CharacterCard.module.css
+++ b/src/layouts/CharacterCard/CharacterCard.module.css
@@ -716,10 +716,6 @@
     text-align: center;
 }
 
-.alignment-popup-wrapper {
-    width: 450px !important;
-}
-
 .dot {
     width: 10px;
     height: 10px;
@@ -743,7 +739,7 @@
     align-items: center;
 
     position: absolute;
-    top: 10px;
+    bottom: 10px;
     right: 10px;
 }
 
@@ -756,14 +752,19 @@
     visibility: hidden;
 }
 
-.text-input {
+.input-label {
+    font-size: 32px;
+    color: var(--text-light-color);
+}
+
+.ini-wrapper .text-input {
     font-size: 20px;
     width: 100%;
     height: 30px;
     text-align: center;
-    border-radius: 10px;
+    border-radius: 5px;
     border: none;
-    background-color: var(--background-color);
+    background-color: var(--text-light-color);
     color: var(--text-color);
 }
 
@@ -799,13 +800,10 @@
     width: 100%;
     height: 30px;
     text-align: center;
-    border-radius: 10px;
-    background-color: var(--background-color);
+    border-radius: 5px;
+    background-color: var(--text-light-color);
+    border: none;
     color: var(--text-color);
-}
-
-.green.small-popup {
-    width: 320px;
 }
 
 .edit-stat-input[type=text] {
@@ -817,7 +815,7 @@
     flex-direction: column;
     gap: 10px;
     align-items: center;
-    width: 100%;
+    padding-inline: 10px;
 }
 
 .class-race-wrapper {
@@ -900,8 +898,40 @@
     width: 100%;
 }
 
-.ini-wrapper {
-    width: 300px !important;
+.ini-content {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+@media screen and (min-width: 651px) {
+    .ini-wrapper {
+        width: 300px !important;
+    }
+    .alignment-popup-wrapper {
+        width: 450px !important;
+    }
+    .green.small-popup {
+        width: 320px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .ini-wrapper {
+        width: 100%;
+    }
+    .alignment-popup-wrapper {
+        width: 100%;
+    }
+    .green.small-popup {
+        width: 100%;
+    }
+}
+
+.content-alignment {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .horizontal-btn-info {
