--- a/src/components/Playcard/Tabs/Loot/Loot.module.css
+++ b/src/components/Playcard/Tabs/Loot/Loot.module.css
@@ -280,6 +280,8 @@
     flex-direction: column;
     flex-wrap: nowrap;
     gap: 10px;    
+    max-height: 100%;
+    overflow: scroll;
 }
 
 .eq-inputs-line {
