--- a/src/components/Playcard/Tabs/Characteristics/Characteristics.module.css
+++ b/src/components/Playcard/Tabs/Characteristics/Characteristics.module.css
@@ -28,6 +28,24 @@
     overflow-y: scroll;
 }
 
+@media screen and (min-width: 651px) {
+    .edit-stat-wrapper {
+        width: 300px !important;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .edit-stat-wrapper {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
+}
+
 @media screen and (max-width: 550px) {
     .stat-column {
         width: 100%;
@@ -295,13 +313,6 @@
     position: absolute;
     bottom: 10px;
     right: 10px;
-}
-
-.edit-stat-wrapper {
-    width: 300px !important;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
 }
 
 .edit-stat-line {
